[package]
name = "mutator"
description = "Mutator allows to use a struct in later crate as your builder."
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/mutator/*/mutator/"
repository = "https://github.com/kdy1997/mutator"

readme = "README.md"
keywords = ["extension", "chain"]

[dependencies]
